<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search"
        android:layout_marginBottom="16dp"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionSearch" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_search_otp_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_fa_accounts"
        android:textSize="12sp"
        android:textColor="@color/primary"
        android:visibility="gone"
        android:layout_marginBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/tv_search_pass_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwords"
        android:textSize="12sp"
        android:textColor="@color/primary"
        android:visibility="gone"
        android:layout_marginBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_search_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/search_hint"
        android:textColor="@color/on_surface_variant"
        android:visibility="visible"
        android:layout_marginTop="48dp" />

</LinearLayout>